# docker-event-emitter

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-event-emitter.cabal
app/: Main.hs
src/Docker/Event/: Emitter.hs
src/Docker/Event/Emitter/: Internal.hs
test/: Spec.hs
test/Docker/Event/Emitter/: Tests.hs
test/Docker/Event/Emitter/Internal/: Tests.hs
