name:                docker-event-emitter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Deadleg/docker-event-emitter#README.md
license:             BSD3
license-file:        LICENSE
author:              Deadleg
maintainer:          example@example.com
copyright:           William
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable docker-event-emitter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , conduit >= 1.2.6.6
                     , docker-event-emitter
                     , http-conduit >= 2.1.11
                     , http-client == 0.4.31
                     , optparse-applicative >= 0.12.1.0
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Docker.Event.Emitter
                     , Docker.Event.Emitter.Internal
  build-depends:       base >= 4.7 && < 5
                     , http-conduit >= 2.1.11
                     , conduit-extra >= 1.1.13.1
                     , network >= 2.6.2.1
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6.6
                     , transformers >= 0.4.2.0
                     , hedis >= 0.6.10
                     , network >= 2.6.2.1
                     , split >= 0.2.3.1
                     , aeson >= 0.11.2.0
                     , text >= 1.2.2.1
                     , http-client == 0.4.31
  default-language:    Haskell2010

test-suite docker-event-emitter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , docker-event-emitter
                     , aeson >= 0.11.2.0
                     , unordered-containers == 0.2.7.1
                     , conduit >= 1.2.6.6
                     , text >= 1.2.2.1
                     , tasty == 0.11.0.3
                     , tasty-hunit == 0.9.2
                     , tasty-quickcheck == 0.8.4
                     , QuickCheck == 2.8.2
                     , HUnit == 1.3.1.1
                     , bytestring >= 0.10.6.0
                     , word8 >= 0.1.2
                     , transformers >= 0.4.2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Deadleg/docker-event-emitter
